2015-03-15  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (WritePNGImage) Avoid a null pointer dereference
	while logging inherited color_type (Fixes Coverity CID 10185).


2015-03-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageInfo): Fix problems with reading
	filenames that include a colon.  Resolves SourceForge bug #294
	"display and convert (probably other things too) choke on
	filenames with colons in".

	* magick/utility.c (GetPathComponent): Fix SubImagePath
	extraction. Fixes SourceForge bug #66 "converting runs slowly when
	subimage is specified".

2015-03-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc (-geometry): Document the significance of 'x'
	as used in a geometry specification.  In particular, document that
	if width is specified without a trailing 'x' that height is set to
	width.  This is in response to SourceForge bug #296 "Strange
	-resize WIDTH results with version 1.3.21".

2015-03-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (GlobExpression): Remove use of IsSubimage().

	* magick/image.c (IsSubimage): Re-implement with a more robust
	solution.  Combined with fixes to ps.c and pdf.c, allows selecting
	specific pages, as well as re-ordering.

	* coders/ps.c (ReadPSImage): Set image frame scene ids
	appropriately.

	* coders/pdf.c (ReadPDFImage): Set image frame scene ids
	appropriately.

	* magick/utility.c (TranslateTextEx): -format %Q should report
	JPEG quality estimate if it is available.  Resolves SourceForge
	bug #293 "gm identify bug?".

	* doc/options.imdoc: Documented JPEG-specific -format tags.

2015-03-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Image.cpp (repage): New method to reset page
	settings.  Contributed by Dirk Lemstra.

2015-03-07  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadOnePNGImage): Respect the PixelsResource
	limit.
