@@ -315,7 +315,7 @@ static void draw_pattern_push( wmfAPI* API,
                                unsigned long rows )
 {
   char
-    pattern_id[30];
+    pattern_id[MaxTextExtent];
 
   FormatString(pattern_id,"brush_%lu",id);
   DrawPushPattern(WmfDrawContext,pattern_id,0,0,columns,rows);
@@ -683,7 +683,7 @@ static void ipa_device_begin(wmfAPI * API)
       if(image)
         {
           char
-            pattern_id[30];
+            pattern_id[MaxTextExtent];
 
           (void) strcpy(image->magick,"MIFF");
           DrawPushDefs(WmfDrawContext);
@@ -1139,7 +1139,7 @@ static void ipa_region_clip(wmfAPI *API, wmfPolyRectangle_t *poly_rect)
   if(poly_rect->count > 0)
     {
       char
-        clip_path_id[30];
+        clip_path_id[MaxTextExtent];
 
       /* Define clip path */
       ddata->clip_path_id++;
@@ -1616,7 +1616,7 @@ static void util_set_brush(wmfAPI * API, wmfDC * dc, const BrushApply brush_appl
         DrawPopDefs(WmfDrawContext);
         {
           char
-            pattern_id[30];
+            pattern_id[MaxTextExtent];
 
           FormatString(pattern_id, "#brush_%lu", ddata->pattern_id);
 
