@@ -35,6 +35,19 @@
 <div class="document">
 
 
+<p>2015-03-15  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/wmf.c (draw_pattern_push): FormatString() requires a
+buffer of MaxTextExtent bytes.  Fix for Coverity issue 44741.
+(ipa_device_begin): FormatString() requires a buffer of
+MaxTextExtent bytes.  Fix for Coverity issue 44740.
+(util_set_brush): FormatString() requires a buffer of
+MaxTextExtent bytes. Fix for Coverity issue 44739.
+(ipa_region_clip): FormatString() requires a buffer of
+MaxTextExtent bytes. Fix for Coverity issue 44738.</li>
+</ul>
+</blockquote>
 <p>2015-03-15  Glenn Randers-Pehrson  &lt;<a class="reference external" href="mailto:glennrp&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">glennrp<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
